--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,17 @@
 server:
-  port: 8086
-
+  port: 8081
 spring:
   application:
-    name: CombineService
+    name: Combine-Services
   datasource:
-    url: jdbc:mysql://localhost:3306/spr240
-    username: root
-    password: root
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:postgresql://dpg-cuhn2jrtq21c73bclu10-a.oregon-postgres.render.com:5432/ppspr
+    username: ppspr_user
+    password: Ksvghyw9KJTJGP44qfJAc7IVSOWpETQX
+    driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: update
-
 eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
